--- a/TVAPPshell/app/build.gradle
+++ b/TVAPPshell/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.esquel.dininghall.tvappshell"
+        applicationId "com.esquel.dininghall.tvmealshowappshell"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
